--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
         "league/oauth2-server": "^5.1",
         "doctrine/orm": "^2.5",
         "symfony/yaml": "^3.2",
-        "slim/twig-view": "^2.2"
+        "slim/twig-view": "^2.2",
+        "monolog/monolog": "^1.22"
     },
     "require-dev": {
         "league/event": "^2.1",
