--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "require": {
         "slim/slim": "3.0.*",
-        "misi/oauth2-server": "^5.1",
+        "league/oauth2-server": "^5.1",
         "doctrine/orm": "^2.5",
         "symfony/yaml": "^3.2",
         "slim/twig-view": "^2.2",
