--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
         "league/oauth2-server": "^5.1",
         "slim/twig-view": "^2.2",
         "monolog/monolog": "^1.22",
-        "slim/csrf": "^0.8.1"
+        "slim/csrf": "^0.8.1",
+        "bryanjhv/slim-session": "^3.0"
     },
     "require-dev": {
         "league/event": "^2.1",
