--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
         "slim/twig-view": "^2.2",
         "monolog/monolog": "^1.22",
         "slim/csrf": "^0.8.1",
-        "bryanjhv/slim-session": "^3.0"
+        "bryanjhv/slim-session": "^3.0",
+        "zendframework/zend-diactoros": "^1.3"
     },
     "require-dev": {
         "league/event": "^2.1",
